...
    <string name="debug_version_fmt">Version: <xliff:g id="version">%s</xliff:g></string>
    <string name="app_libraries">Third-party libraries: <xliff:g id="app_libraries_list">%s</xliff:g></string>
    <string name="app_resources">Third-party resources: <xliff:g id="app_resources_list">%s</xliff:g></string>
    <string name="selectBarcodeTitle">Select barcode</string>
    <string name="thumbnailDescription">Thumbnail</string>
    <string name="starImage">Favorite star</string>
    <string name="settings">Settings</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_key_theme" translatable="false">pref_theme</string>
    <string name="settings_system_theme">System</string>
    <string name="settings_key_system_theme" translatable="false">system</string>
    <string name="settings_light_theme">Light</string>
    <string name="settings_key_light_theme" translatable="false">light</string>
...
        <item quantity="one"><xliff:g>%1$d</xliff:g> card (<xliff:g id="archivedCount">%2$d</xliff:g> archived)</item>
        <item quantity="other"><xliff:g>%1$d</xliff:g> cards (<xliff:g id="archivedCount">%2$d</xliff:g> archived)</item>
    </plurals>
    <string name="previousCard">Previous</string>
    <string name="nextCard">Next</string>
    <string name="failedToOpenUrl">Install a web browser first</string>
    <string name="welcome">Welcome to Catima</string>
    <string name="importCards">Import cards</string>
    <string name="updateBalanceTitle">How much did you spend or receive?</string>
    <string name="updateBalanceHint">Enter amount</string>
    <string name="currentBalanceSentence">Current balance: <xliff:g>%s</xliff:g></string>
    <string name="newBalanceSentence">New balance: <xliff:g>%s</xliff:g></string>
    <string name="validFromDate">Valid from</string>
...
    <string name="wear_bt_pairing_mismatch_title">New authorization request from "<xliff:g>%1$s</xliff:g>"</string>
    <string name="wear_bt_pairing_mismatch_message">This device was previously authorized but is now presenting a different identity token. This happens when the Wear OS app is reinstalled or its data is cleared. It can also indicate a Bluetooth MAC spoofing attempt.\n\nOnly accept if you recently reinstalled the Catima Wear OS app on this watch.</string>
    <string name="open_settings">Open settings</string>
    <string name="action_display_options">Display options</string>
    <string name="show_archived_cards">Show archived cards</string>
    <string name="view_online">View online</string>
    <string name="action_more_options">More options</string>
    <string name="addWithoutBarcode">Add a card with no barcode</string>
    <string name="enter_card_id">Enter the ID number or text on your card</string>
    <string name="card_id_must_not_be_empty">Card ID must not be empty</string>
    <string name="add_a_card_in_a_different_way">Add a card in a different way</string>
    <string name="field_must_not_be_empty">Field must not be empty</string>
    <string name="manually_enter_barcode_instructions">Enter the ID number or text on your card and press the barcode that looks like the one on your card.</string>
...
