...
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="protect.card_locker.MainActivity"
    tools:showIn="@layout/main_activity">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/helpSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/welcome_icon"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/welcome_text"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome" />

...
