<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/widget"
                android:layout_width="60.0dip"
                android:layout_height="70.0dip">
    <ImageView
        android:id="@+id/icon"
        android:layout_gravity="start"
        android:layout_centerHorizontal="true"
        android:layout_width="55.0dip"
        android:layout_height="55.0dip"
        android:gravity="center_horizontal"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:gravity="center_horizontal"
        android:ellipsize="end"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
</RelativeLayout>
